--- a/hr-microservice/src/main/resources/application.properties
+++ b/hr-microservice/src/main/resources/application.properties
@@ -13,5 +13,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.data.mongodb.uri=mongodb://localhost:27017/hr
 spring.data.mongodb.database=hr
 
+spring.kafka.consumer.group-id=hr
+spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
