--- a/hr-microservice/src/main/resources/application.properties
+++ b/hr-microservice/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.address=localhost
 server.port=4200
+server.servlet.context-path=/hr
+spring.mvc.servlet.path=/api/v1
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hrdb?useSSL=false
 spring.datasource.username=root
@@ -19,3 +21,14 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+persistence.target=mysql
+message.bus=kafka
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=demoadmin
+spring.rabbitmq.password=secret123
+
+apiMajorVersion=1
+apiMinorVersion=1
+apiTimeStamp=1539748037
